# MMB

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
crates/monitor-control/: Cargo.toml
crates/monitor-control/src/: lib.rs
crates/monitor-control/src/windows/: ddc.rs  display_config.rs  mod.rs  wmi.rs
src/: main.rs  monitor_hardware.rs  monitor_state.rs  monitor_worker.rs  theme_worker.rs  windows_integration.rs
src/monitor_hardware/: ddc.rs  display_config.rs  windows.rs  wmi.rs
src/windows_integration/: desktop.rs  mouse_hook.rs  single_instance.rs  theme.rs
ui/: app.slint
