[workspace]
members = ["crates/monitor-control"]
resolver = "3"

[package]
name = "mmb"
version = "0.1.8"
edition = "2024"
build = "build.rs"
description = "Multi Monitor Brightness"

[dependencies]
monitor-control = { path = "crates/monitor-control" }
slint = { version = "1.17", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-software",
    "unstable-winit-030",
    "system-tray",
    "image-default-formats",
    "compat-1-2",
] }
windows-sys = { version = ">=0.59, <=0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.17"
winresource = "0.1.31"

[profile.release]
lto = true
strip = true
